--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 *{
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -13,13 +13,23 @@ p {
     margin: 0;
 }
 
+.container {
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+
 section {
     background: grey;
     border: 1px solid black;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-    color: black;
     position: relative;
     overflow: auto;
+
 }
 
 #Chicken {
@@ -27,6 +37,11 @@ section {
     width: 30%;
     margin-left: 70%;
     padding: 5px;
+    font-size: 125%;
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 0;
+
 }
 
 
@@ -35,6 +50,11 @@ section {
     width: 30%;
     margin-left: 70%;
     padding: 5px;
+    font-size: 125%;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 
@@ -43,8 +63,15 @@ section {
     width: 30%;
     margin-left: 70%;
     padding: 5px;
+    font-size: 125%;
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
+.row {
+    width: 100%;
+}
 
 /* Desktop  */
 
