--- a/Stylesheet/style.css
+++ b/Stylesheet/style.css
@@ -4,7 +4,7 @@
 }
 
 h1 {
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Helvetica, sans-serif;
     text-align: center;
 }
 
@@ -25,7 +25,7 @@ p {
 
 section {
     border: 1px solid black;
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Helvetica, sans-serif;
     position: relative;
     overflow: auto;
     background: grey;
@@ -39,6 +39,7 @@ section {
     padding: 5px;
     font-size: 125%;
     font-weight: bold;
+    text-align: center;
     margin-bottom: 0;
     margin-top: 0;
     background: #cd5c5c;
@@ -53,6 +54,7 @@ section {
     font-size: 125%;
     color: white;
     font-weight: bold;
+    text-align: center;
     margin-bottom: 0;
     margin-top: 0;
     background: #FF1439;
@@ -61,11 +63,12 @@ section {
 
 #Sushi {
     border: 1px solid black;
-    width: 30%;
+    width: 30px;
     margin-left: 70%;
     padding: 5px;
     font-size: 125%;
     font-weight: bold;
+    text-align: center;
     margin-bottom: 0;
     margin-top: 0;
     background: #f0e68c;
